Fixed: Velocity sensors don't change their units to ft/s in any modules, they are always in m/s.
Switched to use VelocitySensor and VelocitySensorNode from piccolo-phet
Merged ThreePatchImagePressureNode into PressureSensorNode
Improvements for ThreeImageNode
Simplified ThreePatchImageNode, factoring out a new subclass ThreePatchImagePressureNode
Fixed: handle on water tower looks fuzzy because it is scaled up
Use PhetColorScheme.RED_ALTERNATIVE color to improve color blindness support
Moved velocity sensor initial condition so they don't overlap
Moved water tower legs to the back layer to prevent sticking into the water tank
Fixed: Water drops should get smaller as they go faster
Fixed: Fluid Density text field is not wide enough to display the value (problem in all modules)
Fixed: On Mac, in default locations, pressure sensors are partially obscured by control panel
Proposed solution for faucet slider not being vertically centered in faucet handle on mac
Converted horizontal layout to vertical for faucet radio buttons
Converted from ButtonExpander to MinimizeMaximizeNode for fluid density control
Converted control panels to use ControlPanelNode
Made the handle on the top of the water tower 25% bigger
# 0.00.11 (48549) Feb 2, 2011
Added a hole in the top of the water tower
# 0.00.10 (48517) Feb 2, 2011
Added a hole in the water tank
Made slider door act binary instead of continuous
Use up-down cursor for tank and sider door
Renamed "auto" to "match leakage"
In "match leakage", hide the manual slider
Added internationalization
# 0.00.09 (48472) Feb 1, 2011
Improved the default locations for the pressure and velocity sensors in the water tower tab
Added the ability to measure pressure in the water tank water
Made fluid color a function of density in water tower tab
Fixed: ruler changes location when changing units
Added english units to measuring tape
Fixed: Faucet should shut off when tank full
Fixed: Reset all broken