@@ -3,6 +3,7 @@ package edu.colorado.phet.fluidpressureandflow.view;
 
 import java.awt.geom.Point2D;
 
+import edu.colorado.phet.common.phetcommon.model.ResetModel;
 import edu.colorado.phet.common.phetcommon.model.property.ObservableProperty;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
@@ -12,11 +13,11 @@ import edu.colorado.phet.fluidpressureandflow.model.Units;
  * @author Sam Reid
  */
 public class MeterStick extends FluidPressureAndFlowRuler {
-    public MeterStick( ModelViewTransform transform, final ObservableProperty<Boolean> visible, final Property<Boolean> setVisible, Point2D.Double rulerModelOrigin ) {
-        super( transform, visible, setVisible, Math.abs( transform.modelToViewDeltaY( 5 ) ), new String[] { "0", "1", "2", "3", "4", "5" }, Units.METERS.getAbbreviation(), rulerModelOrigin );
+    public MeterStick( ModelViewTransform transform, final ObservableProperty<Boolean> visible, final Property<Boolean> setVisible, Point2D.Double rulerModelOrigin, ResetModel resetModel ) {
+        super( transform, visible, setVisible, Math.abs( transform.modelToViewDeltaY( 5 ) ), new String[] { "0", "1", "2", "3", "4", "5" }, Units.METERS.getAbbreviation(), rulerModelOrigin, resetModel );
     }
 
-    public MeterStick( ModelViewTransform transform, final ObservableProperty<Boolean> visible, final Property<Boolean> setVisible, Point2D.Double rulerModelOrigin, boolean flag ) {
-        super( transform, visible, setVisible, Math.abs( transform.modelToViewDeltaY( 30 ) ), new String[] { "0", "5", "10", "15", "20", "25", "30" }, Units.METERS.getAbbreviation(), rulerModelOrigin );
+    public MeterStick( ModelViewTransform transform, final ObservableProperty<Boolean> visible, final Property<Boolean> setVisible, Point2D.Double rulerModelOrigin, boolean flag, ResetModel resetModel ) {
+        super( transform, visible, setVisible, Math.abs( transform.modelToViewDeltaY( 30 ) ), new String[] { "0", "5", "10", "15", "20", "25", "30" }, Units.METERS.getAbbreviation(), rulerModelOrigin, resetModel );
     }
 }
