@@ -1,3 +1,4 @@
+Fixed: Reset All does not reset location of ruler
 Fixed: Velocity sensors don't change their units to ft/s in any modules, they are always in m/s.
 Switched to use VelocitySensor and VelocitySensorNode from piccolo-phet
 Merged ThreePatchImagePressureNode into PressureSensorNode
